--- a/style.css
+++ b/style.css
@@ -22,6 +22,19 @@ text {
   padding-left: 30px;
 }
 
+.logo {
+  display: inline-block;
+  fill: none;
+  position: relative;
+}
+.logo.app-name {
+  padding-left: 60px;
+}
+.logo svg {
+  position: absolute;
+  top: -42px;
+}
+
 #middle-container {
   margin: 54px 0 30px 0;
   padding: 30px;
@@ -54,15 +67,26 @@ tr:nth-child(2n):not(:last-of-type) .section-title {
 }
 
 #middle-container,
-#bottom-container {
-  box-shadow: 0 0 10px 0px RGBA(0, 0, 0, 0.50);
-}
-
-#middle-container,
 #bottom-container,
 #middle-row,
 #bottom-row {
   background-color: #E2E7EF;
+}
+
+#middle-container,
+#bottom-container {
+  border-radius: 4px;
+  box-shadow: 0 0 10px 0 RGBA(0, 0, 0, 0.50);
+}
+
+#middle-row {
+  border-radius: 4px 4px 0 0;
+  box-shadow: 0 0 10px 0 RGBA(0, 0, 0, 0.50);
+}
+
+#bottom-row {
+  border-radius: 0 0 4px 4px;
+  box-shadow: 0 0px 10px -10px RGBA(0, 0, 0, 0.50);
 }
 
 #top-row {
