When user inputs are provided, show unqualified beams in disabled state for Distribution Chart

--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ tr:nth-child(2n):not(:last-of-type) .section-title {
 }
 
 .voronoi {
+  /* display: none; */
   fill: none;
   stroke: pink;
   stroke-opacity: 0;
