--- a/style.css
+++ b/style.css
@@ -309,15 +309,21 @@ input[type=number]::-webkit-outer-spin-button {
   color: white;
 }
 
-.attribution {
-  float: right;
+.attributions {
+  position: absolute;
+  right: 30px;
+}
+.attributions a {
+  margin-right: 20px;
+}
+.attributions a:last-of-type {
+  margin-right: 0;
 }
 
 a {
   color: #878B9B;
-  margin-top: 5px;
-  font-size: 10px;
-  font-weight: 100;
+  font-size: 11px;
+  font-weight: 300;
   letter-spacing: 2px;
   text-decoration: none;
   text-transform: uppercase;
